# fvdb-minecraft

./: .gitattributes  .gitignore  README.md  UNet.py  example.ipynb  test.ipynb  utils.py
data/processing/: CMakeLists.txt  serialize_world_chunks.cpp  serialize_world_regions.cpp
minecraft-serialization/: CMakeLists.txt  NBTExplorer.cpp  NBTParser.h  NBTVDB.h  block_list.h  block_list.json  block_list.txt  constants.h  extract_block_list.py  findBlock.cpp  helpers.h  litemapy.ipynb  map.ipynb  notes.md  raw_block_list.txt  schematic.ipynb  schematic.py  serialize.ipynb  serializeRegion.cpp
minecraft-serialization/archive/: extract_block_list.py  raw_block_list.txt
minecraft-serialization/archive/notebooks/: litemapy.ipynb
minecraft-serialization/cpp/: CMakeLists.txt  constants.h  helpers.h  serializer.cpp  test
minecraft-serialization/cpp/test_world/: level.dat_old
minecraft-serialization/cpp/test_world/advancements/: 0f980d5a-5313-430c-97a9-847e28f00f45.json
minecraft-serialization/cpp/test_world/entities/: r.-1.-1.mca  r.-1.-2.mca  r.-1.0.mca  r.-1.1.mca  r.-2.-1.mca  r.-2.-2.mca  r.-2.0.mca  r.0.-1.mca  r.0.-2.mca  r.0.0.mca  r.0.1.mca  r.1.-1.mca  r.1.0.mca  r.1.1.mca
minecraft-serialization/cpp/test_world/playerdata/: 0f980d5a-5313-430c-97a9-847e28f00f45.dat_old
minecraft-serialization/cpp/test_world/poi/: r.-1.-1.mca  r.-1.-2.mca  r.-2.-1.mca  r.-2.0.mca  r.0.-1.mca  r.0.0.mca  r.1.0.mca
minecraft-serialization/cpp/test_world/region/: r.-1.-2.mca  r.-1.1.mca  r.-2.-1.mca  r.-2.-2.mca  r.-2.0.mca  r.-2.1.mca  r.0.-2.mca  r.0.1.mca  r.1.-1.mca  r.1.-2.mca  r.1.0.mca  r.1.1.mca
minecraft-serialization/cpp/test_world/stats/: 0f980d5a-5313-430c-97a9-847e28f00f45.json
minecraft-serialization/custom_saves/train/1/: level.dat_old
minecraft-serialization/custom_saves/train/1/poi/: r.0.-1.mca
minecraft-serialization/custom_saves/train/1/region/: r.1.-1.mca
minecraft-serialization/custom_saves/train/10/entities/: r.0.-1.mca
minecraft-serialization/custom_saves/train/10/region/: r.-1.1.mca  r.1.-1.mca
minecraft-serialization/custom_saves/train/11/entities/: r.-2.-1.mca  r.-2.1.mca
minecraft-serialization/custom_saves/train/13/entities/: r.0.-1.mca
minecraft-serialization/custom_saves/train/13/poi/: r.-1.0.mca
minecraft-serialization/custom_saves/train/13/stats/: 0f980d5a-5313-430c-97a9-847e28f00f45.json
minecraft-serialization/custom_saves/train/14/entities/: r.-1.1.mca  r.0.-1.mca  r.0.-2.mca  r.1.-1.mca
minecraft-serialization/custom_saves/train/14/playerdata/: 0f980d5a-5313-430c-97a9-847e28f00f45.dat_old
minecraft-serialization/custom_saves/train/14/poi/: r.-2.0.mca  r.0.-1.mca  r.0.-2.mca
minecraft-serialization/custom_saves/train/14/region/: r.-1.1.mca  r.-2.1.mca
minecraft-serialization/custom_saves/train/15/: level.dat_old
minecraft-serialization/custom_saves/train/15/region/: r.0.0.mca  r.1.-1.mca
minecraft-serialization/custom_saves/train/16/: level.dat_old
minecraft-serialization/custom_saves/train/16/entities/: r.-1.0.mca  r.0.-1.mca
minecraft-serialization/custom_saves/train/16/region/: r.-1.1.mca  r.-2.-2.mca  r.1.0.mca
minecraft-serialization/custom_saves/train/17/advancements/: 0f980d5a-5313-430c-97a9-847e28f00f45.json
minecraft-serialization/custom_saves/train/17/region/: r.-2.1.mca
minecraft-serialization/custom_saves/train/18/: level.dat_old
minecraft-serialization/custom_saves/train/18/advancements/: 0f980d5a-5313-430c-97a9-847e28f00f45.json
minecraft-serialization/custom_saves/train/19/entities/: r.-1.-1.mca
minecraft-serialization/custom_saves/train/19/poi/: r.-1.-1.mca
minecraft-serialization/custom_saves/train/2/advancements/: 0f980d5a-5313-430c-97a9-847e28f00f45.json
minecraft-serialization/custom_saves/world1/: level.dat_old
minecraft-serialization/custom_saves/world1/advancements/: 0f980d5a-5313-430c-97a9-847e28f00f45.json
minecraft-serialization/custom_saves/world1/entities/: r.-1.-1.mca  r.-1.0.mca  r.-2.-1.mca  r.-2.0.mca
minecraft-serialization/custom_saves/world1/playerdata/: 0f980d5a-5313-430c-97a9-847e28f00f45.dat_old
minecraft-serialization/custom_saves/world1/poi/: r.-1.-1.mca  r.-1.0.mca  r.-2.-1.mca  r.-2.0.mca
minecraft-serialization/custom_saves/world1/region/: r.-1.1.mca  r.-2.1.mca  r.0.-1.mca  r.0.0.mca  r.0.1.mca
minecraft-serialization/custom_saves/world1/stats/: 0f980d5a-5313-430c-97a9-847e28f00f45.json
minecraft-serialization/data/test_world/: level.dat_old
minecraft-serialization/data/test_world/advancements/: 0f980d5a-5313-430c-97a9-847e28f00f45.json
minecraft-serialization/data/test_world/entities/: r.-1.-1.mca  r.-1.-2.mca  r.-1.0.mca  r.-1.1.mca  r.-2.-1.mca  r.-2.-2.mca  r.-2.0.mca  r.-2.1.mca  r.0.-1.mca  r.0.-2.mca  r.0.0.mca  r.0.1.mca  r.1.-1.mca  r.1.0.mca  r.1.1.mca
minecraft-serialization/data/test_world/playerdata/: 0f980d5a-5313-430c-97a9-847e28f00f45.dat_old
minecraft-serialization/data/test_world/poi/: r.-1.-2.mca  r.-1.1.mca  r.-2.-1.mca  r.-2.1.mca  r.1.-1.mca  r.1.0.mca
minecraft-serialization/data/test_world/region/: r.-1.-2.mca  r.-1.1.mca  r.-2.-1.mca  r.-2.-2.mca  r.-2.0.mca  r.-2.1.mca  r.0.-2.mca  r.0.1.mca  r.1.-1.mca  r.1.-2.mca  r.1.0.mca  r.1.1.mca
minecraft-serialization/data/test_world/stats/: 0f980d5a-5313-430c-97a9-847e28f00f45.json
minecraft-serialization/examples/: findBlock.cpp  parseChunk.cpp  serializeRegion.cpp
minecraft-serialization/examples/test_world/entities/: r.-1.-2.mca  r.-1.0.mca  r.-2.-1.mca  r.-2.-2.mca  r.0.1.mca  r.1.1.mca
minecraft-serialization/examples/test_world/poi/: r.-1.0.mca  r.-1.1.mca  r.0.1.mca
minecraft-serialization/examples/test_world/region/: r.-1.-2.mca  r.-2.1.mca  r.0.-2.mca  r.1.-1.mca  r.1.0.mca  r.1.1.mca
minecraft-serialization/notebooks/: map.ipynb
minecraft-serialization/schematics/: tree.litematic
visualizer/: CMakeLists.txt
visualizer/assets/block_jsons/: _all.json  _list.json
visualizer/assets/block_states/: _all.json  _list.json
visualizer/include/glad/: glad.h
visualizer/src/: generateImage.cu  generateImage.cuh  glad.c  render.cu
(+56316 files in other folders)
